--- a/Calculator App/index.html
+++ b/Calculator App/index.html
@@ -13,31 +13,31 @@
             <input type="text" name="" id="result">
         </div>
       <div>
-        <button id="clearBtn">C</button>
+        <button id="clearBtn" onclick="clearRes()">C</button>
       </div>
 
       <div>
-          <button class="btn">7</button>
-          <button class="btn">8</button>
-          <button class="btn">9</button>
-          <button class="btn">x</button>
+          <button class="btn" onclick="getNumber(7)">7</button>
+          <button class="btn" onclick="getNumber(8)">8</button>
+          <button class="btn" onclick="getNumber(9)">9</button>
+          <button class="btn" onclick="getNumber('*')">x</button>
         </div>
       <div>
-        <button class="btn">4</button>
-        <button class="btn">5</button>
-        <button class="btn">6</button>
-        <button class="btn">-</button>
+        <button class="btn" onclick="getNumber(4)">4</button>
+        <button class="btn" onclick="getNumber(5)">5</button>
+        <button class="btn" onclick="getNumber(6)">6</button>
+        <button class="btn" onclick="getNumber('-')">-</button>
       </div>
 
       <div>
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
-        <button class="btn">+</button>
+        <button class="btn" onclick="getNumber(1)">1</button>
+        <button class="btn" onclick="getNumber(2)">2</button>
+        <button class="btn" onclick="getNumber(3)">3</button>
+        <button class="btn" onclick="getNumber('+')">+</button>
       </div>
       <div>
-        <button class="halfBtn">0</button>
-        <button class="halfBtn">=</button>
+        <button class="halfBtn" onclick="getNumber(0)">0</button>
+        <button class="halfBtn" onclick="getResult()">=</button>
        
       </div>
     </div>
