Concatenation issue resolve example

--- a/Calculator App/index.html
+++ b/Calculator App/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <div class="main">
+      <!-- <div class="main"> -->
         
-          <div>
+          <!-- <div>
             <input type="text" name="" id="result">
         </div>
-      <div>
+        <button onclick="data('click me')">Click Me</button> -->
+      <!-- <div>
         <button id="clearBtn" onclick="clearRes()">C</button>
       </div>
 
@@ -40,7 +41,7 @@
         <button class="halfBtn" onclick="getResult()">=</button>
        
       </div>
-    </div>
+    </div> -->
 
     <script src="app.js"></script>
   </body>
