--- a/Calculator App/index.html
+++ b/Calculator App/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <!-- <div class="main"> -->
+      <div class="main"> 
         
-          <!-- <div>
+          <div>
             <input type="text" name="" id="result">
         </div>
-        <button onclick="data('click me')">Click Me</button> -->
-      <!-- <div>
+      <div>
         <button id="clearBtn" onclick="clearRes()">C</button>
       </div>
 
@@ -41,8 +40,9 @@
         <button class="halfBtn" onclick="getResult()">=</button>
        
       </div>
-    </div> -->
+    </div>
+
 
     <script src="app.js"></script>
   </body>
-</html>
+</html> 
