disable functionality in watch

--- a/Stop watch/index.html
+++ b/Stop watch/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div>
-        <button onclick="start()">Start</button>
+        <button onclick="start()" id="startBtn">Start</button>
         <button onclick="stop()">Stop</button>
         <button onclick="reset()">Reset</button>
     </div>
