adding dom intro

--- a/Intro/DOM/index.html
+++ b/Intro/DOM/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="main">
+        <div>
+    <img id = "image"  src="https://images.pexels.com/photos/267301/pexels-photo-267301.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
+    <h3 id="name">Loafers!</h3>
+    <span id="price">Rs:9800</span>
+    <button id="btn" onclick="addtoCart()">Add to cart</button>
+    </div>
+
+    <div id="cart">
+
+    </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
