--- a/Query Selector/index.html
+++ b/Query Selector/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    <div class="nav" id="nav">
+    <!-- <div class="nav" id="nav">
          
-    </div>
+    </div> -->
+    <p class="nav">hello there!</p>
+    <p class="nav">hi there!</p>
 </body>
 <script src="app.js"></script>
 </html>
