--- a/Query Selector/index.html
+++ b/Query Selector/index.html
@@ -8,11 +8,19 @@
 </head>
 
 <body>
-    <!-- <div class="nav" id="nav">
+    <div class="nav" id="nav">
          
-    </div> -->
+    </div>
     <p class="nav">hello there!</p>
     <p class="nav">hi there!</p>
+
+    <div class="heading" id="heading">
+        <p>Advance Selector
+        </p>
+        <h1>javaScript</h1>
+        <h1>reactJs</h1>
+        <h1>Html</h1>
+    </div>
 </body>
 <script src="app.js"></script>
 </html>
