--- a/addEventListener/index.html
+++ b/addEventListener/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="nav" id="nav">
-        <h1>hello there!</h1>
+        <!-- <h1>hello there!</h1> -->
     </div>
 </body>
 <script src="app.js"></script>
